--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,20 @@ img{
     shape-outside:circle(50%);
     width: 200px;
     height: 200px;
+    border: 2px solid red;
+    background-color: rgba(108, 107, 107);
+    padding: 5px;
+    animation: mymove 5s infinite;
+    cursor: pointer;
 
+}
+@keyframes mymove{
+    50%{
+        border-bottom-right-radius: 50%;
+    }
+}
+img:hover{
+    transform: scaleX(-1);
 }
 p{
     color:red;
