--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,25 @@ img:hover{
 p{
     color:red;
 }
+/* Map css*/
+.map{
+   width: 500px;
+   height: 500px;
+   background-color: #333;
+}
+
+[class*="copyrights-pane"] {
+   display: none !important;
+}
+
+[class*="ground-pane"] {
+   filter: grayscale(1);
+}
+
+.balloon__address {
+   color: yellow;
+}
+
+.balloon a {
+   color:red;
+}
